Fix #208: Custom solution properties missing from Excel report